swim_common/src/form/tests/derive/unknown_container_attr.stderr
error: Unknown attribute
  --> $DIR/unknown_container_attr.rs:19:12
   |
19 |     #[form(swim)]
   |            ^^^^
